--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your page title</title>
     <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   </head>
 
   <body>
-    <header></header>
-    <main>Replace with your page content</main>
+    <header><header><div id="navbarWrapper"></div></header></header>
+    <main></main>
     <footer></footer>
   </body>
 </html>
